feat: implement parent category mapping logic and update `getCategoriesGrouped` endpoint
- Enhance `CategoryRowMapper` to populate parent category details, including name, type, and iconography.
- Add `FIND_ALL_WITH_PARENT` query in `CategoryQueries` to join parent category data.
- Introduce `findAllWIthParent` method in `CategoryRepository` for fetching categories with parent details.
- Update `CategoryService` to simplify `getCategoriesGrouped` logic and return a flat list.
- Adjust `getCategoriesGrouped` endpoint in `CategoryController` to reflect the new response structure.